@@ -20,7 +20,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.client.HttpClientErrorException.Forbidden;
@@ -92,8 +91,7 @@ final class StandardGitHubRepository implements GitHubRepository {
 	@SuppressWarnings({ "rawtypes", "unchecked" })
 	private <T> List<T> get(String name, Function<Map<String, Object>, T> mapper) {
 		ResponseEntity<List> response = this.rest.getForEntity(name, List.class);
-		List<Map<String, Object>> body = response.getBody();
-		return body.stream().map(mapper).collect(Collectors.toList());
+		return ((List<Map<String, Object>>) response.getBody()).stream().map(mapper).toList();
 	}
 
 }
