@@ -16,8 +16,6 @@
 
 package org.springframework.boot.actuate.autoconfigure.scheduling;
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.boot.actuate.autoconfigure.endpoint.condition.ConditionalOnAvailableEndpoint;
 import org.springframework.boot.actuate.scheduling.ScheduledTasksEndpoint;
@@ -40,7 +38,7 @@ public class ScheduledTasksEndpointAutoConfiguration {
 	@Bean
 	@ConditionalOnMissingBean
 	public ScheduledTasksEndpoint scheduledTasksEndpoint(ObjectProvider<ScheduledTaskHolder> holders) {
-		return new ScheduledTasksEndpoint(holders.orderedStream().collect(Collectors.toList()));
+		return new ScheduledTasksEndpoint(holders.orderedStream().toList());
 	}
 
 }
