@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 
 package org.springframework.boot.actuate.web.mappings.reactive;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -48,16 +49,16 @@ public class RequestMappingConditionsDescription {
 
 	RequestMappingConditionsDescription(RequestMappingInfo requestMapping) {
 		this.consumes = requestMapping.getConsumesCondition().getExpressions().stream()
-				.map(MediaTypeExpressionDescription::new).collect(Collectors.toList());
+				.map(MediaTypeExpressionDescription::new).toList();
 		this.headers = requestMapping.getHeadersCondition().getExpressions().stream()
-				.map(NameValueExpressionDescription::new).collect(Collectors.toList());
+				.map(NameValueExpressionDescription::new).toList();
 		this.methods = requestMapping.getMethodsCondition().getMethods();
 		this.params = requestMapping.getParamsCondition().getExpressions().stream()
-				.map(NameValueExpressionDescription::new).collect(Collectors.toList());
+				.map(NameValueExpressionDescription::new).toList();
 		this.patterns = requestMapping.getPatternsCondition().getPatterns().stream().map(PathPattern::getPatternString)
-				.collect(Collectors.toSet());
+				.collect(Collectors.collectingAndThen(Collectors.toSet(), Collections::unmodifiableSet));
 		this.produces = requestMapping.getProducesCondition().getExpressions().stream()
-				.map(MediaTypeExpressionDescription::new).collect(Collectors.toList());
+				.map(MediaTypeExpressionDescription::new).toList();
 	}
 
 	public List<MediaTypeExpressionDescription> getConsumes() {
