@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.actuate.web.mappings.servlet;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.servlet.mvc.condition.MediaTypeExpression;
@@ -48,15 +47,15 @@ public class RequestMappingConditionsDescription {
 
 	RequestMappingConditionsDescription(RequestMappingInfo requestMapping) {
 		this.consumes = requestMapping.getConsumesCondition().getExpressions().stream()
-				.map(MediaTypeExpressionDescription::new).collect(Collectors.toList());
+				.map(MediaTypeExpressionDescription::new).toList();
 		this.headers = requestMapping.getHeadersCondition().getExpressions().stream()
-				.map(NameValueExpressionDescription::new).collect(Collectors.toList());
+				.map(NameValueExpressionDescription::new).toList();
 		this.methods = requestMapping.getMethodsCondition().getMethods();
 		this.params = requestMapping.getParamsCondition().getExpressions().stream()
-				.map(NameValueExpressionDescription::new).collect(Collectors.toList());
+				.map(NameValueExpressionDescription::new).toList();
 		this.patterns = extractPathPatterns(requestMapping);
 		this.produces = requestMapping.getProducesCondition().getExpressions().stream()
-				.map(MediaTypeExpressionDescription::new).collect(Collectors.toList());
+				.map(MediaTypeExpressionDescription::new).toList();
 	}
 
 	private Set<String> extractPathPatterns(RequestMappingInfo requestMapping) {
