@@ -20,7 +20,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.assertj.core.api.Condition;
 import org.hamcrest.collection.IsMapContaining;
@@ -210,8 +209,7 @@ public final class Metadata {
 
 		private ItemMetadata findItem(ConfigurationMetadata metadata, String name) {
 			List<ItemMetadata> candidates = metadata.getItems().stream()
-					.filter((item) -> item.isOfItemType(this.itemType) && name.equals(item.getName()))
-					.collect(Collectors.toList());
+					.filter((item) -> item.isOfItemType(this.itemType) && name.equals(item.getName())).toList();
 			if (candidates.size() > 1) {
 				throw new IllegalStateException("More than one metadata item with name '" + name + "': " + candidates);
 			}
