@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,7 +30,6 @@ import java.util.function.Consumer;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 
@@ -59,10 +58,10 @@ abstract class AbstractArchiveIntegrationTests {
 	}
 
 	protected AssertProvider<JarAssert> jar(File file) {
-		return new AssertProvider<JarAssert>() {
+		return new AssertProvider<>() {
 
 			@Override
-			@Deprecated
+			@Deprecated(since = "2.3.0", forRemoval = false)
 			public JarAssert assertThat() {
 				return new JarAssert(file);
 			}
@@ -179,10 +178,8 @@ abstract class AbstractArchiveIntegrationTests {
 
 		ListAssert<String> entryNamesInPath(String path) {
 			List<String> matches = new ArrayList<>();
-			withJarFile((jarFile) -> withEntries(jarFile,
-					(entries) -> matches.addAll(entries.map(ZipEntry::getName)
-							.filter((name) -> name.startsWith(path) && name.length() > path.length())
-							.collect(Collectors.toList()))));
+			withJarFile((jarFile) -> withEntries(jarFile, (entries) -> matches.addAll(entries.map(ZipEntry::getName)
+					.filter((name) -> name.startsWith(path) && name.length() > path.length()).toList())));
 			return new ListAssert<>(matches);
 		}
 
