@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.boot.validation.beanvalidation;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.aop.ClassFilter;
@@ -45,7 +44,7 @@ public class FilteredMethodValidationPostProcessor extends MethodValidationPostP
 	 * @param excludeFilters filters to apply
 	 */
 	public FilteredMethodValidationPostProcessor(Stream<? extends MethodValidationExcludeFilter> excludeFilters) {
-		this.excludeFilters = excludeFilters.collect(Collectors.toList());
+		this.excludeFilters = excludeFilters.map(MethodValidationExcludeFilter.class::cast).toList();
 	}
 
 	/**
